Fix: bad inquiry link text align

--- a/assets/sass/_inquiry.scss
+++ b/assets/sass/_inquiry.scss
@@ -128,6 +128,7 @@ ul.inquiry-list {
 
     a.btn-link {
       padding-left: 0;
+      text-align: left;
     }
   }
 
